--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,18 @@
         
         <button type="submit" class="btn btn-outline-primary">Go</button>
     </form>
-    
+    <div class="w3-half w3-container">
+        <h4 >LONG ARTICLE TEXT SUMMERIZER USING NATURAL LANGUAGE
+          PROCESSOR (NLP)</h4>
+        <p>BY<br/>
+          ABUBAKAR ISMAIL MUSA<br/>
+          Nas/CSC/18/1014<br/><br/>
+          DEPARTMENT OF MATHEMATICAL SCIENCE
+          FACULTY OF NATURALAND APPLIED SCIENCE
+          ALQALAM UNIVERSITY KATSINA<br/><br/>
+          PROJECT SUPERVISOR<br/>MALAM USMAN NURUDDEEN ABDULLAHI</p>
+
+
+ </div>
 </body>
 </html>
